# vaiz-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_SETUP.md  DOC_SPEC.md  KNOWN_ISSUES.md  LICENSE  README.md  example.env  package.json  pyproject.toml  setup.cfg
.cursor/rules/: project-standards.mdc
.github/workflows/: deploy-docs.yml
docs-site/: DEPLOYMENT.md  README.md  algolia-crawler-config.js  algolia-crawler-config.json  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
docs-site/docs/: contributing.md  examples.md  getting-started.md  intro.md
docs-site/static/: llms.txt  robots.txt  site.webmanifest
examples/: __init__.py  advanced_custom_field_management.py  advanced_document_workflows.py  advanced_mention_usage.py  append_json_document.py  basic_usage.py  comment_files.py  comprehensive_blocks_example.py  config.py  create_board_custom_field.py  create_board_group.py  create_board_type.py  create_document.py  create_milestone.py  create_task.py  create_task_with_description_and_files.py  create_task_with_external_file.py  create_task_with_file.py  create_task_with_multi_select_custom_field.py  custom_field_helpers_usage.py  document_content_management.py  document_hierarchy.py  document_navigation_blocks.py  document_with_code_blocks.py  edit_board_custom_field.py  edit_board_group.py  edit_board_type.py  edit_document.py  edit_milestone.py  edit_task.py  edit_task_with_files.py  embed_blocks_example.py  file_and_image_blocks.py  get_all_tasks_paginated.py  get_board.py  get_boards.py  get_document.py  get_documents.py  get_history.py  get_milestone.py  (+26 more)
rules/: project-standards.mdc
tests/: test_append_document.py  test_boards.py  test_client.py  test_comments.py  test_complete_custom_field_workflow.py  test_complex_tables.py  test_config.py  test_custom_field_helpers.py  test_document_blocks.py  test_document_structure_helpers.py  test_documents.py  test_embed_blocks.py  test_embed_blocks_integration.py  test_file_blocks.py  test_markdown_documents.py  test_members.py  test_mention_blocks.py  test_mention_integration.py  test_mention_verification.py  test_milestones.py  test_missing_field_types.py  test_multi_select_custom_field.py  test_profile.py  test_projects.py  test_replace_json_document.py  test_spaces.py  test_standalone_documents.py  test_task_list_integration.py  test_task_with_files.py  test_tasks.py  test_tiptap_helpers.py  test_upload.py
vaiz/: __init__.py  client.py  models.py
vaiz-js-sdk/: README.md  package-lock.json  package.json  tsconfig.json
vaiz-ts-sdk/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
vaiz-ts-sdk/__tests__/: client.test.ts  integration.test.ts  profile.test.ts  projects.test.ts  sdk.test.js  simple.test.js  tasks.test.ts  test-config.ts  upload.test.ts
vaiz-ts-sdk/examples/: basic.ts  demo.js
vaiz-ts-sdk/src/: base.ts  boards.ts  client.ts  comments.ts  errors.ts  index.ts  milestones.ts  profile.ts  projects.ts  tasks.ts  upload.ts
vaiz-ts-sdk/types/: jest.d.ts
vaiz/api/: __init__.py  base.py  boards.py  comments.py  documents.py  (+7 more)
(+87 files in other folders)
