[project]
name = "vaiz-sdk"
version = "0.1.5"
description = "Official SDK for interacting with the Vaiz API"
authors = [{ name = "Vaiz", email = "mail@vaiz.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = ["requests>=2.31.0", "pydantic>=2.0", "python-dotenv>=0.9.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[project.urls]
Homepage = "https://github.com/vaizcom/vaiz-python-sdk"
Repository = "https://github.com/vaizcom/vaiz-python-sdk"
Issues = "https://github.com/vaizcom/vaiz-python-sdk/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vaiz*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
vaiz = ["py.typed"]
